Fix mobile order & desktop alignment

--- a/style.css
+++ b/style.css
@@ -166,9 +166,3 @@ nav {
     margin-top: -35rem;
   }
 }
-
-/* @media screen and (min-width: 992px) {
-  .custom-mh {
-    margin-bottom: 2rem;
-  } */
-}
